z-index fix

--- a/src/components/card/card.module.scss
+++ b/src/components/card/card.module.scss
@@ -60,6 +60,8 @@
 }
 
 .activeCard {
+  z-index: 1;
+
   .card {
     transition: transform 0.5s;
     filter: blur(0);
