--- a/src/components/documentCard/documentCard.module.scss
+++ b/src/components/documentCard/documentCard.module.scss
@@ -43,11 +43,14 @@
 }
 
 .activeCard {
+  z-index: 1;
+
   .card {
     transition: transform 0.5s;
     filter: blur(0);
     transform: scale(1) translateX(0);
     z-index: 1;
+
 
     &::before {
       background-color: transparent;
